--- a/views/views.xml
+++ b/views/views.xml
@@ -13,11 +13,17 @@
         <field name="view_mode">list,form</field>
     </record>
 
+      <record id="action_adherant" model="ir.actions.act_window">
+        <field name="name">adherant</field>
+        <field name="res_model">res.partner</field>
+        <field name="view_mode">form</field>
+    </record>
+
      <menuitem id="menu_cga_root" name="CGA" sequence="10"/>
      <menuitem id="menu_config" name="Paramètres" sequence="10" parent="menu_cga_root"/>
      <menuitem id="menu_fiscal_regime" name="Régimes Fiscaux" parent="menu_config" action="action_fiscal_regime" sequence="10"/>
      <menuitem id="menu_fiscal_tqxe" name="Obligations" parent="menu_config" action="action_fiscal_taxe" sequence="10"/>
-
+     <menuitem id="menu_adhesion" name="Adhesion CGA" parent="menu_cga_root" action="action_adherant"  sequence="10"/>
     <!-- explicit list view definition -->
 <!--
     <record model="ir.ui.view" id="inovcga.list">
