--- a/views/views.xml
+++ b/views/views.xml
@@ -1,78 +1,96 @@
 <odoo>
-  <data>
+    <data>
 
-    <record id="action_fiscal_regime" model="ir.actions.act_window">
-        <field name="name">Régime fiscal</field>
-        <field name="res_model">fiscal.regime</field>
-        <field name="view_mode">list,form</field>
-    </record>
+        <record id="action_fiscal_regime" model="ir.actions.act_window">
+            <field name="name">Régime fiscal</field>
+            <field name="res_model">fiscal.regime</field>
+            <field name="view_mode">list,form</field>
+        </record>
 
-    <record id="action_fiscal_taxe" model="ir.actions.act_window">
-        <field name="name">Impôt</field>
-        <field name="res_model">fiscal.taxe</field>
-        <field name="view_mode">list,form</field>
-    </record>
+        <record id="action_fiscal_taxe" model="ir.actions.act_window">
+            <field name="name">Impôt</field>
+            <field name="res_model">fiscal.taxe</field>
+            <field name="view_mode">list,form</field>
+        </record>
 
-     <menuitem id="menu_cga_root" name="CGA" sequence="10"/>
-     <menuitem id="menu_config" name="Paramètres" sequence="10" parent="menu_cga_root"/>
-     <menuitem id="menu_fiscal_regime" name="Régimes Fiscaux" parent="menu_config" action="action_fiscal_regime" sequence="10"/>
-     <menuitem id="menu_fiscal_tqxe" name="Obligations" parent="menu_config" action="action_fiscal_taxe" sequence="10"/>
+        <record id="action_adherant" model="ir.actions.act_window">
+            <field name="name">adherant</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_mode">list,form</field>
+        </record>
 
-    <!-- explicit list view definition -->
-<!--
-    <record model="ir.ui.view" id="inovcga.list">
-      <field name="name">inovcga list</field>
-      <field name="model">inovcga.inovcga</field>
-      <field name="arch" type="xml">
-        <list>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </list>
-      </field>
-    </record>
--->
+        <record id="action_fiscal_echeance_calendar" model="ir.actions.act_window">
+            <field name="name">Calendrier des Échéances</field>
+            <field name="res_model">fiscal.echeance</field>
+            <field name="view_mode">calendar,list,form</field>
+        </record>
 
-    <!-- actions opening views on models -->
-<!--
-    <record model="ir.actions.act_window" id="inovcga.action_window">
-      <field name="name">inovcga window</field>
-      <field name="res_model">inovcga.inovcga</field>
-      <field name="view_mode">list,form</field>
-    </record>
--->
+        <menuitem id="menu_cga_root" name="CGA" sequence="10"/>
+        <menuitem id="menu_config" name="Paramètres" sequence="20" parent="menu_cga_root"/>
+        <menuitem id="menu_fiscal_regime" name="Régimes Fiscaux" parent="menu_config" action="action_fiscal_regime"
+                  sequence="10"/>
+        <menuitem id="menu_fiscal_tqxe" name="Obligations" parent="menu_config" action="action_fiscal_taxe"
+                  sequence="10"/>
+        <menuitem id="menu_adhesion" name="Adhesion CGA" parent="menu_cga_root" sequence="10"/>
+        <menuitem id="menu_adherent" name="Dossier Adherent" parent="menu_adhesion" action="action_adherant"
+                  sequence="10"/>
+        <menuitem id="menu_echeance" name="Calendrier des echeances" parent="menu_adhesion" action="action_fiscal_echeance_calendar"
+                  sequence="10" />
+        <!-- explicit list view definition -->
+        <!--
+            <record model="ir.ui.view" id="inovcga.list">
+              <field name="name">inovcga list</field>
+              <field name="model">inovcga.inovcga</field>
+              <field name="arch" type="xml">
+                <list>
+                  <field name="name"/>
+                  <field name="value"/>
+                  <field name="value2"/>
+                </list>
+              </field>
+            </record>
+        -->
 
-    <!-- server action to the one above -->
-<!--
-    <record model="ir.actions.server" id="inovcga.action_server">
-      <field name="name">inovcga server</field>
-      <field name="model_id" ref="model_inovcga_inovcga"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "list,form",
-          "res_model": model._name,
-        }
-      </field>
-    </record>
--->
+        <!-- actions opening views on models -->
+        <!--
+            <record model="ir.actions.act_window" id="inovcga.action_window">
+              <field name="name">inovcga window</field>
+              <field name="res_model">inovcga.inovcga</field>
+              <field name="view_mode">list,form</field>
+            </record>
+        -->
 
-    <!-- Top menu item -->
-<!--
-    <menuitem name="inovcga" id="inovcga.menu_root"/>
--->
-    <!-- menu categories -->
-<!--
-    <menuitem name="Menu 1" id="inovcga.menu_1" parent="inovcga.menu_root"/>
-    <menuitem name="Menu 2" id="inovcga.menu_2" parent="inovcga.menu_root"/>
--->
-    <!-- actions -->
-<!--
-    <menuitem name="List" id="inovcga.menu_1_list" parent="inovcga.menu_1"
-              action="inovcga.action_window"/>
-    <menuitem name="Server to list" id="inovcga" parent="inovcga.menu_2"
-              action="inovcga.action_server"/>
--->
-  </data>
+        <!-- server action to the one above -->
+        <!--
+            <record model="ir.actions.server" id="inovcga.action_server">
+              <field name="name">inovcga server</field>
+              <field name="model_id" ref="model_inovcga_inovcga"/>
+              <field name="state">code</field>
+              <field name="code">
+                action = {
+                  "type": "ir.actions.act_window",
+                  "view_mode": "list,form",
+                  "res_model": model._name,
+                }
+              </field>
+            </record>
+        -->
+
+        <!-- Top menu item -->
+        <!--
+            <menuitem name="inovcga" id="inovcga.menu_root"/>
+        -->
+        <!-- menu categories -->
+        <!--
+            <menuitem name="Menu 1" id="inovcga.menu_1" parent="inovcga.menu_root"/>
+            <menuitem name="Menu 2" id="inovcga.menu_2" parent="inovcga.menu_root"/>
+        -->
+        <!-- actions -->
+        <!--
+            <menuitem name="List" id="inovcga.menu_1_list" parent="inovcga.menu_1"
+                      action="inovcga.action_window"/>
+            <menuitem name="Server to list" id="inovcga" parent="inovcga.menu_2"
+                      action="inovcga.action_server"/>
+        -->
+    </data>
 </odoo>
