--- a/views/views.xml
+++ b/views/views.xml
@@ -25,6 +25,20 @@
             <field name="view_mode">calendar,list,form</field>
         </record>
 
+        <!--        Action serveur -->
+        <record id="action_afficher_echeances_console" model="ir.actions.server">
+            <field name="name">Afficher les Échéances</field>
+            <field name="model_id" ref="model_fiscal_taxe"/>
+            <field name="binding_model_id" ref="model_fiscal_taxe"/>
+            <field name="binding_type">action</field>
+            <field name="binding_view_types">calendar</field> <!-- Très important pour le menu roue dentée -->
+            <field name="state">code</field>
+            <field name="code">
+                action = env['fiscal.regime'].afficher_echeances()
+            </field>
+        </record>
+
+
         <menuitem id="menu_cga_root" name="CGA" sequence="10"/>
         <menuitem id="menu_config" name="Paramètres" sequence="20" parent="menu_cga_root"/>
         <menuitem id="menu_fiscal_regime" name="Régimes Fiscaux" parent="menu_config" action="action_fiscal_regime"
@@ -34,8 +48,9 @@
         <menuitem id="menu_adhesion" name="Adhesion CGA" parent="menu_cga_root" sequence="10"/>
         <menuitem id="menu_adherent" name="Dossier Adherent" parent="menu_adhesion" action="action_adherant"
                   sequence="10"/>
-        <menuitem id="menu_echeance" name="Calendrier des echeances" parent="menu_adhesion" action="action_fiscal_echeance_calendar"
-                  sequence="10" />
+        <menuitem id="menu_echeance" name="Calendrier des echeances" parent="menu_adhesion"
+                  action="action_fiscal_echeance_calendar"
+                  sequence="10"/>
         <!-- explicit list view definition -->
         <!--
             <record model="ir.ui.view" id="inovcga.list">
