--- a/views/views.xml
+++ b/views/views.xml
@@ -14,7 +14,7 @@
         </record>
 
         <record id="action_adherant" model="ir.actions.act_window">
-            <field name="name">adherant</field>
+            <field name="name">Adhérent</field>
             <field name="res_model">res.partner</field>
             <field name="view_mode">list,form</field>
         </record>
@@ -25,17 +25,20 @@
             <field name="view_mode">calendar,list,form</field>
         </record>
 
+        <!-- Menu principal -->
         <menuitem id="menu_cga_root" name="CGA" sequence="10"/>
+
+        <!-- Sous-menu Paramètres -->
         <menuitem id="menu_config" name="Paramètres" sequence="20" parent="menu_cga_root"/>
-        <menuitem id="menu_fiscal_regime" name="Régimes Fiscaux" parent="menu_config" action="action_fiscal_regime"
-                  sequence="10"/>
-        <menuitem id="menu_fiscal_tqxe" name="Obligations" parent="menu_config" action="action_fiscal_taxe"
-                  sequence="10"/>
-        <menuitem id="menu_adhesion" name="Adhesion CGA" parent="menu_cga_root" sequence="10"/>
-        <menuitem id="menu_adherent" name="Dossier Adherent" parent="menu_adhesion" action="action_adherant"
-                  sequence="10"/>
-        <menuitem id="menu_echeance" name="Calendrier des echeances" parent="menu_adhesion" action="action_fiscal_echeance_calendar"
-                  sequence="10" />
+        <menuitem id="menu_fiscal_regime" name="Régimes Fiscaux" parent="menu_config" action="action_fiscal_regime" sequence="10"/>
+        <menuitem id="menu_fiscal_tqxe" name="Obligations" parent="menu_config" action="action_fiscal_taxe" sequence="20"/>
+
+        <!-- Sous-menu Adhésion -->
+        <menuitem id="menu_adhesion" name="Adhésion CGA" parent="menu_cga_root" sequence="30"/>
+        <menuitem id="menu_adherent" name="Dossier Adhérent" parent="menu_adhesion" action="action_adherant" sequence="10"/>
+        <menuitem id="menu_echeance" name="Calendrier des Échéances" parent="menu_adhesion" action="action_fiscal_echeance_calendar" sequence="20"/>
+
+
         <!-- explicit list view definition -->
         <!--
             <record model="ir.ui.view" id="inovcga.list">
