--- a/views/adherant.xml
+++ b/views/adherant.xml
@@ -10,7 +10,7 @@
                 <field name="raison_Sociale"/>
                 <field name="identification_fiscale"/>
                 <field name="regime_id"/>
-
+                <field name="is_adherent"/>
                 <field name="taxe_ids" readonly="1" context="{'default_order': 'deadline'}">
                     <list string="Impôts liés au régime" editable="bottom" default_order="deadline asc">
                         <field name="name" string="Nom de l'Impôt"/>
