--- a/views/adherant.xml
+++ b/views/adherant.xml
@@ -11,6 +11,7 @@
                 <field name="identification_fiscale"/>
                 <field name="regime_id"/>
                 <field name="is_adherent"/>
+                <field name="all_echeances_paid"/>
                 <field name="taxe_ids" readonly="1" context="{'default_order': 'deadline'}">
                     <list string="Impôts liés au régime" editable="bottom" default_order="deadline asc">
                         <field name="name" string="Nom de l'Impôt"/>
