--- a/views/views.xml
+++ b/views/views.xml
@@ -10,7 +10,7 @@
         <record id="action_fiscal_taxe" model="ir.actions.act_window">
             <field name="name">Impôt</field>
             <field name="res_model">fiscal.taxe</field>
-            <field name="view_mode">list,form</field>
+            <field name="view_mode">kanban,list,form</field>
         </record>
 
         <record id="action_echeance" model="ir.actions.act_window">
@@ -31,6 +31,12 @@
             <field name="view_mode">list,form</field>
         </record>
 
+        <record id="view_res_partner_tree_adherent" model="ir.actions.act_window">
+            <field name="name">adherant</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_mode">list,form</field>
+            <field name="domain">[('is_adherent', '=', True)]</field>
+        </record>
 
         <record id="action_fiscal_echeance_calendar" model="ir.actions.act_window">
             <field name="name">Calendrier des Échéances Fiscale</field>
@@ -52,7 +58,7 @@
         </record>
 
 
-        <menuitem id="menu_cga_root" name="CGA" sequence="10"/>
+        <menuitem id="menu_cga_root" name="CGA" sequence="10" parent="sale_subscription.menu_sale_subscription_root"/>
         <menuitem id="menu_config" name="Paramètres" sequence="20" parent="menu_cga_root"/>
         <menuitem id="menu_echeance_fiscale" name="Échéance" sequence="20" parent="menu_cga_root"/>
         <menuitem id="menu_fiscal_regime" name="Régimes Fiscaux" parent="menu_config" action="action_fiscal_regime"
@@ -61,6 +67,9 @@
                   sequence="10"/>
         <menuitem id="menu_adhesion" name="Adhesion CGA" parent="menu_cga_root" sequence="10"/>
         <menuitem id="menu_adherent" name="Dossier Adherent" parent="menu_adhesion" action="action_adherant"
+                  sequence="10"/>
+        <menuitem id="menu_adherent_member" name="Membres CGA" parent="menu_adhesion"
+                  action="view_res_partner_tree_adherent"
                   sequence="10"/>
         <menuitem id="menu_echeance_calendar" name="Calendrier des echeances" parent="menu_echeance_fiscale"
                   action="action_fiscal_echeance_calendar"
