--- a/views/adherent.xml
+++ b/views/adherent.xml
@@ -7,17 +7,19 @@
         <field name="arch" type="xml">
 
             <!-- Insérer le bouton dans le button_box -->
-            <xpath expr="//div[@class='oe_button_box']" position="inside">
+            <!-- <xpath expr="//div[@class='oe_button_box']" position="inside">
                 <button name="send_adherent_mail"
                         string="Envoyer Email"
                         type="object"
                         class="oe_highlight"/>
-            </xpath>
+            </xpath> -->
 
             <xpath expr="//field[@name='vat']" position="after">
+                <!-- <field name="raison_Sociale"/> -->
                 <field name="identification_fiscale"/>
                 <field name="regime_id"/>
-
+                <field name="is_adherent"/>
+                <field name="all_echeances_paid"/>
                 <field name="taxe_ids" readonly="1" context="{'default_order': 'deadline'}">
                     <list string="Impôts liés au regime" editable="bottom" default_order="deadline asc">
                         <field name="name" string="Nom de l'Impôt"/>
